buildscript {
    dependencies {
        classpath 'com.github.fgiannesini.libsass.gradle.plugin:libsass-gradle-plugin:+'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'pmd'
    id 'com.github.hierynomus.license' version '0.15.0'
}

apply plugin: 'com.github.fgiannesini.libsass.gradle.plugin'

version '1.0-SNAPSHOT'

sourceCompatibility = 1.12

repositories {
    jcenter()
}

dependencies {
    // Junit (Unit testing)
    testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
    
    // TestFX (UI testing)
    testCompile 'org.testfx:testfx-core:4.0.15-alpha'
    testCompile 'org.testfx:testfx-junit5:4.0.15-alpha'

    // For ListOrderedMap: https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    compile 'org.apache.commons:commons-collections4:4.3'

    // Commons Lang https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    compile 'org.apache.commons:commons-lang3:3.9'

    // ControlsFX https://mvnrepository.com/artifact/org.controlsfx/controlsfx
    compile 'org.controlsfx:controlsfx:11.0.0'

    // Logback https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
    compile 'ch.qos.logback:logback-classic:1.2.3'

    // SLF4J https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    compile 'org.slf4j:slf4j-api:1.7.26'
}

javafx {
    version = '12.0.1'
    modules = [ 'javafx.controls' ]
}

test {
    useJUnitPlatform()
}

libSassParameters {
    inputFilePath = "$projectDir/src/main/resources/stylesheets/scss/styles.scss"
    outputFilePath = "$projectDir/src/main/resources/stylesheets/css/styles.css"
    watchedDirectoryPath = "scss"
    sourceComments = true
}

compileJava.finalizedBy('compileLibSass')

// Define the main class for the application
mainClassName = 'BoundingboxEditor.BoundingBoxEditorApp'
